project(clang-refractor)
cmake_minimum_required(VERSION 3.6)

link_directories(${CMAKE_SOURCE_DIR})
add_executable(clang-rename 
	ClangRename.cpp
	USRFinder.cpp
	USRFindingAction.cpp
	USRLocFinder.cpp
	RenamingAction.cpp
  )

add_subdirectory(samplecode)

target_link_libraries(clang-rename
	clang_all_shared
llvm
version
)
#[[
clangTooling
clangIndex
clangFormat
clangToolingCore
clangFrontendTool
clangFrontend
clangDriver
clangSerialization
clangCodeGen
clangParse
clangSema
clangStaticAnalyzerFrontend
clangStaticAnalyzerCheckers
clangStaticAnalyzerCore
clangAnalysis
clangARCMigrate
clangRewrite
clangRewriteFrontend
clangEdit
clangAST
clangLex
clangASTMatchers
clangBasic
clang

  clangTooling
  clangFrontend
  clangRewrite
  clangToolingCore
  clangBasic
  clang
  llvm
  )
clangTooling
clangFrontendTool
clangFrontend
clangDriver
clangSerialization
clangCodeGen
clangParse
clangSema
clangStaticAnalyzerFrontend
clangStaticAnalyzerCheckers
clangStaticAnalyzerCore
clangAnalysis
clangARCMigrate
clangRewrite
clangRewriteFrontend
clangEdit
clangAST
clangLex
clangBasic
clang
llvm
]]
